--- a/public/frame-style.css
+++ b/public/frame-style.css
@@ -1,6 +1,8 @@
 :root {
+    --fade-duration: 2s;
     --frame-border:80px;
     --frame-color:rgba(240,240,230,1);
+    --back-color:rgba(255,255,255,1);
     --shadow-offset:6px;
     --shadow-blur:10px;
     --shadow-color:rgba(0,0,0,0.75);
@@ -12,6 +14,7 @@ body {
     margin:0!important;
     padding:0!important;
     overflow: hidden;
+    background-color:var(--back-color);
 }
 
 img {
@@ -31,11 +34,11 @@ img {
   }
 
   .fadeIn {
-    animation: fadeInAnimation 2s ease-in-out;
+    animation: fadeInAnimation var(--fade-duration) ease-in-out;
   }
 
   .fadeOut {
-    animation: fadeOutAnimation 2s ease-in-out;
+    animation: fadeOutAnimation var(--fade-duration) ease-in-out;
   }
 
 .fullscreen-image {
